# diary-emotion-action

./: .dockerignore  .gitignore  Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: example.yml  run-action.yml  sentiment-status.yml  test-and-release.yml
PRD/: notion.md
diary_emotion_action/: emotion_analyzer.py  github_updater.py  main.py  models.py  notion_client.py
tests/: test_emotion_analyzer.py  test_github_updater.py  test_notion_client.py
