[tool.poetry]
name = "diary-emotion-action"
version = "0.1.0"
description = "Updates GitHub profile status based on emotions detected from Notion diary entries"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "diary_emotion_action"}]

[tool.poetry.dependencies]
python = "^3.9"
notion-client = {extras = ["async"], version = "2.0.0"}
transformers = "4.38.2"
torch = "^1.13.0"
requests = "2.31.0"
python-dotenv = "1.0.1"
numpy = "<2.0"
httpx = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "0.23.5"
pytest-mock = "3.12.0"
black = "24.2.0"
isort = "5.13.2"
flake8 = "7.0.0"
mypy = "1.8.0"
types-requests = "2.31.0.20240311"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: mark test as async",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["transformers.*", "torch.*"]
ignore_missing_imports = true 
